--- a/research/deeplab/deeplab_demo.ipynb
+++ b/research/deeplab/deeplab_demo.ipynb
@@ -171,7 +171,7 @@
     "            self.OUTPUT_TENSOR_NAME,\n",
     "            feed_dict={self.INPUT_TENSOR_NAME: [np.asarray(resized_image)]})\n",
     "        seg_map = batch_seg_map[0]\n",
-    "        return resized_image, seg_map\n"
+    "        return resized_image, seg_map"
    ]
   },
   {
@@ -235,7 +235,7 @@
     "    ax.yaxis.tick_right()\n",
     "    plt.yticks(range(len(unique_labels)), LABEL_NAMES[unique_labels])\n",
     "    plt.xticks([], [])\n",
-    "    ax.tick_params(width=0)\n"
+    "    ax.tick_params(width=0)"
    ]
   },
   {
@@ -315,7 +315,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -338,5 +340,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
